--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -29,5 +29,5 @@ jobs:
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
           git add README.md
-          git commit -m "🔄 Atualizando estatísticas do WakaTime" || exit 0
+          git commit -m "Atualizando estatísticas do WakaTime" || exit 0
           git push
